# tinyraytracer

./: .gitignore  CMakeLists.txt  Readme.md  cpp.hint
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  raytracer.cpp  raytracer.h  utils.cpp  utils.h
src/cuda/: cuda_raytracer.cu  cuda_raytracer.h
